--- a/projects/school-maps/styles.css
+++ b/projects/school-maps/styles.css
@@ -1,4 +1,4 @@
-*,:after,:before{box-sizing:border-box}body{margin:40px auto;max-width:960px;color:#444;padding:0 20px;font:18px/1.6 Georgia,"Times New Roman",Times,serif; overflow-x: hidden;}h1,h2,h3,h4,h5{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;line-height:1.2}a{color:#07c;text-decoration:none}a:hover{color:#059;text-decoration:underline}hr{border:0;margin:25px 0}table{border-spacing:0;border-collapse:collapse;text-align:left;padding-bottom:25px}td,th,hr{border-bottom:1px solid #ddd}button,select{background:#ddd;border:1px solid #bbb; cursor:pointer;padding:9px 20px;font-size:14px}input,table{font-size:19px}input,td,th{padding:5px;vertical-align:bottom}code,pre,button:hover{background:#bbb}pre{padding:8px;white-space:pre-wrap}textarea{border-color:#ccc}.row{display:block;width:auto;min-height:1px}.row:after{content:"";display:table;clear:both}.row .c{float:left}table,.g2,.g3,.g3-2,.m2,.m3,.m3-2{width:100%}@media (min-width: 960px){.g2{width:50%}.m2{margin-left:50%}.g3{width:33.33%}.g3-2{width:66.66%}.m3{margin-left:33.33%}.m3-2{margin-left:66.66%}.sidebar{padding-right:40px;}}
+*,:after,:before{box-sizing:border-box}body{margin:40px auto;max-width:960px;color:#444;padding:0 20px;font:18px/1.6 Georgia,"Times New Roman",Times,serif; overflow-x: hidden;}h1,h2,h3,h4,h5{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;line-height:1.2}a{color:#07c;text-decoration:none}a:hover{color:#059;text-decoration:underline}hr{border:0;margin:25px 0}table{border-spacing:0;border-collapse:collapse;text-align:left;padding-bottom:25px; font-size: 10px;}td,th,hr{border-bottom:1px solid #ddd}button,select{background:#ddd;border:1px solid #bbb; cursor:pointer;padding:9px 20px;font-size:14px}input{font-size:19px}input,td,th{padding:5px;vertical-align:bottom}code,pre,button:hover{background:#bbb}pre{padding:8px;white-space:pre-wrap}textarea{border-color:#ccc}.row{display:block;width:auto;min-height:1px}.row:after{content:"";display:table;clear:both}.row .c{float:left}table,.g2,.g3,.g3-2,.m2,.m3,.m3-2{width:100%}@media (min-width: 960px){.g2{width:50%}.m2{margin-left:50%}.g3{width:33.33%}.g3-2{width:66.66%}.m3{margin-left:33.33%}.m3-2{margin-left:66.66%}.sidebar{padding-right:40px;}}
 
 /* required styles */
 
@@ -626,7 +626,7 @@
 
 .map {
     width: 100%;
-    height: 300px;
+    height: 350px;
     margin-bottom: 60px;
 }
 
@@ -646,4 +646,22 @@ input[type="radio"] {
 
 label {
     cursor: pointer;
+}
+
+h2 {
+    margin: 0 auto 5px auto;
+}
+
+.popup-item {
+    float: left;
+    background: #fafafa;
+    padding: 4px;
+    font-size: 11px;
+    margin: 4px;
+}
+
+@media (max-width: 960px) {
+  #map {
+    height: 200px;
+  }
 }
